--- a/src/main/resources/services/PXF/package/templates/pxf-site.j2
+++ b/src/main/resources/services/PXF/package/templates/pxf-site.j2
@@ -11,7 +11,7 @@
         </property>
         <property>
                 <name>pxf.service.kerberos.principal</name>
-                <value>pxf/_HOST@EXAMPLE.COM</value>
+                <value>{{_pxf_principal_name}}</value>
                 <description>Kerberos principal pxf service should use.
                 _HOST is replaced automatically with hostnames
                 FQDN</description>
