--- a/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
+++ b/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
@@ -4,46 +4,51 @@
 # Any change in this file can result in PXF failing to run.
 # Adding resources should be done using pxf-public.classpath file.
 ##################################################################
-/etc/gphd/pxf/conf
-/etc/hadoop/conf
-/etc/hive/conf
-/usr/lib/hadoop-hdfs/hadoop-hdfs.jar
-/usr/lib/hadoop-mapreduce/hadoop-mapreduce-client-core.jar
-/usr/lib/hadoop/hadoop-auth.jar
-/usr/lib/hadoop/hadoop-common.jar
-/usr/lib/hadoop/lib/asm-*[0-9].jar
-/usr/lib/hadoop/lib/avro-*[0-9].jar
-/usr/lib/hadoop/lib/commons-cli-*[0-9].jar
-/usr/lib/hadoop/lib/commons-codec-*[0-9].jar
-/usr/lib/hadoop/lib/commons-collections-*[0-9].jar
-/usr/lib/hadoop/lib/commons-configuration-*[0-9].jar
-/usr/lib/hadoop/lib/commons-io-*[0-9].jar
-/usr/lib/hadoop/lib/commons-lang-*[0-9].jar
-/usr/lib/hadoop/lib/commons-logging-*[0-9].jar
-/usr/lib/hadoop/lib/guava-*[0-9].jar
-/usr/lib/hadoop/lib/jackson-core-asl-*[0-9].jar
-/usr/lib/hadoop/lib/jackson-mapper-asl-*[0-9].jar
-/usr/lib/hadoop/lib/jetty-*[0-9].jar
-/usr/lib/hadoop/lib/jersey-core-*[0-9].jar
-/usr/lib/hadoop/lib/jersey-server-*[0-9].jar
-/usr/lib/hadoop/lib/log4j-*[0-9].jar
-/usr/lib/hadoop/lib/protobuf-java-*[0-9].jar
-/usr/lib/hadoop/lib/slf4j-api-*[0-9].jar
-/usr/lib/hbase/lib/hbase-client.jar
-/usr/lib/hbase/lib/hbase-common.jar
-/usr/lib/hbase/lib/hbase-protocol.jar
-/usr/lib/hbase/lib/htrace-core-*[0-9].jar
-/usr/lib/hbase/lib/netty-*[0-9].Final.jar
-/usr/lib/zookeeper/zookeeper.jar
-/usr/lib/hive/lib/antlr-runtime-*[0-9].jar
-/usr/lib/hive/lib/datanucleus-api-jdo-*[0-9].jar
-/usr/lib/hive/lib/datanucleus-core-*[0-9].jar
-/usr/lib/hive/lib/hive-exec.jar
-/usr/lib/hive/lib/hive-metastore.jar
-/usr/lib/hive/lib/jdo-api-*[0-9].jar
-/usr/lib/hive/lib/libfb303-*[0-9].jar
-/usr/lib/gphd/pxf/pxf-hbase-*[0-9].jar
-/usr/lib/gphd/pxf/pxf-hdfs-*[0-9].jar
-/usr/lib/gphd/pxf/pxf-hive-*[0-9].jar
+{{pxf_conf_dir}}
+{{hadoop_conf_dir}}
+{{hive_conf_dir}}
+{{hdfs_client_home}}/hadoop-hdfs.jar
+{{mapreduce_libs_path}}/hadoop-mapreduce-client-core.jar
+
+{{hadoop_home}}/hadoop-auth.jar
+{{hadoop_home}}/hadoop-common.jar
+{{hadoop_home}}/lib/asm-*[0-9].jar
+{{hadoop_home}}/lib/avro-*[0-9].jar
+{{hadoop_home}}/lib/commons-cli-*[0-9].jar
+{{hadoop_home}}/lib/commons-codec-*[0-9].jar
+{{hadoop_home}}/lib/commons-collections-*[0-9].jar
+{{hadoop_home}}/lib/commons-configuration-*[0-9].jar
+{{hadoop_home}}/lib/commons-io-*[0-9].jar
+{{hadoop_home}}/lib/commons-lang-*[0-9].jar
+{{hadoop_home}}/lib/commons-logging-*[0-9].jar
+{{hadoop_home}}/lib/guava-*[0-9].jar
+{{hadoop_home}}/lib/jackson-core-asl-*[0-9].jar
+{{hadoop_home}}/lib/jackson-mapper-asl-*[0-9].jar
+{{hadoop_home}}/lib/jetty-*[pwd0-9].jar
+{{hadoop_home}}/lib/jersey-core-*[0-9].jar
+{{hadoop_home}}/lib/jersey-server-*[0-9].jar
+{{hadoop_home}}/lib/log4j-*[0-9].jar
+{{hadoop_home}}/lib/protobuf-java-*[0-9].jar
+{{hadoop_home}}/lib/slf4j-api-*[0-9].jar
+
+{{hbase_home}}/lib/hbase-client.jar
+{{hbase_home}}/lib/hbase-common.jar
+{{hbase_home}}/lib/hbase-protocol.jar
+{{hbase_home}}/lib/htrace-core-*[0-9].jar
+{{hbase_home}}/lib/netty-*[0-9].Final.jar
+
+{{zookeeper_home}}/zookeeper.jar
+
+{{hive_home}}/lib/antlr-runtime-*[0-9].jar
+{{hive_home}}/lib/datanucleus-api-jdo-*[0-9].jar
+{{hive_home}}/lib/datanucleus-core-*[0-9].jar
+{{hive_home}}/lib/hive-exec.jar
+{{hive_home}}/lib/hive-metastore.jar
+{{hive_home}}/lib/jdo-api-*[0-9].jar
+{{hive_home}}/lib/libfb303-*[0-9].jar
+
+{{pxf_home}}/pxf-hbase-*[0-9].jar
+{{pxf_home}}/pxf-hdfs-*[0-9].jar
+{{pxf_home}}/pxf-hive-*[0-9].jar
 # user defined resources:
 /usr/lib/gphd/publicstage
