--- a/src/main/resources/services/HAWQ/package/templates/hdfs-client.j2
+++ b/src/main/resources/services/HAWQ/package/templates/hdfs-client.j2
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <configuration>
-
+    <property>
+        <name>dfs.allow.truncate</name>
+        <value>true</value>
+    </property>
 {% if security_enabled %}
 	<property>
 		<name>hadoop.security.authentication</name>
