[#90651290] Minor fixes on pxf-private.classpath file

--- a/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
+++ b/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
@@ -7,6 +7,7 @@
 {{pxf_conf_dir}}
 {{hadoop_conf_dir}}
 {{hive_conf_dir}}
+{{hbase_conf_dir}}
 {{hdfs_client_home}}/hadoop-hdfs.jar
 {{mapreduce_libs_path}}/hadoop-mapreduce-client-core.jar
 
@@ -24,12 +25,13 @@
 {{hadoop_home}}/lib/guava-*[0-9].jar
 {{hadoop_home}}/lib/jackson-core-asl-*[0-9].jar
 {{hadoop_home}}/lib/jackson-mapper-asl-*[0-9].jar
-{{hadoop_home}}/lib/jetty-*[pwd0-9].jar
+{{hadoop_home}}/lib/jetty-*[0-9].jar
 {{hadoop_home}}/lib/jersey-core-*[0-9].jar
 {{hadoop_home}}/lib/jersey-server-*[0-9].jar
 {{hadoop_home}}/lib/log4j-*[0-9].jar
 {{hadoop_home}}/lib/protobuf-java-*[0-9].jar
 {{hadoop_home}}/lib/slf4j-api-*[0-9].jar
+{{hadoop_home}}/lib/htrace-core-*[0-9].jar
 
 {{hbase_home}}/lib/hbase-client.jar
 {{hbase_home}}/lib/hbase-common.jar
