[#90665806] Added hadoop-lzo to pxf classpath

--- a/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
+++ b/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
@@ -32,6 +32,7 @@
 {{hadoop_home}}/lib/protobuf-java-*[0-9].jar
 {{hadoop_home}}/lib/slf4j-api-*[0-9].jar
 {{hadoop_home}}/lib/htrace-core-*[0-9].jar
+{{hadoop_home}}/lib/hadoop-lzo-*[0-9].jar
 
 {{hbase_home}}/lib/hbase-client.jar
 {{hbase_home}}/lib/hbase-common.jar
