[#90825606] Fixed pxf classpath issue

--- a/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
+++ b/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
@@ -50,8 +50,8 @@
 {{hive_home}}/lib/jdo-api-*[0-9].jar
 {{hive_home}}/lib/libfb303-*[0-9].jar
 
-{{pxf_home}}/pxf-hbase-*[0-9].jar
-{{pxf_home}}/pxf-hdfs-*[0-9].jar
-{{pxf_home}}/pxf-hive-*[0-9].jar
+{{pxf_home}}/pxf-hbase.jar
+{{pxf_home}}/pxf-hdfs.jar
+{{pxf_home}}/pxf-hive.jar
 # user defined resources:
 /usr/lib/gphd/publicstage
