[#91213784] Fixed jetty jar path in pxf-private-classpath

--- a/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
+++ b/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
@@ -25,7 +25,7 @@
 {{hadoop_home}}/lib/guava-*[0-9].jar
 {{hadoop_home}}/lib/jackson-core-asl-*[0-9].jar
 {{hadoop_home}}/lib/jackson-mapper-asl-*[0-9].jar
-{{hadoop_home}}/lib/jetty-*[0-9].jar
+{{hadoop_home}}/lib/jetty-*.jar
 {{hadoop_home}}/lib/jersey-core-*[0-9].jar
 {{hadoop_home}}/lib/jersey-server-*[0-9].jar
 {{hadoop_home}}/lib/log4j-*[0-9].jar
