--- a/src/main/resources/services/HAWQ/package/templates/hawq.sysctl.conf.j2
+++ b/src/main/resources/services/HAWQ/package/templates/hawq.sysctl.conf.j2
@@ -26,3 +26,6 @@ kernel.pid_max = 798720
 # increase network
 net.core.rmem_max=2097152
 net.core.wmem_max=2097152
+{% if sysctl_vm_overcommit_memory is not none %}
+vm.overcommit_memory={{sysctl_vm_overcommit_memory}}
+{% endif %}
