--- a/src/main/resources/services/HAWQ/package/templates/hawq.limits.conf.j2
+++ b/src/main/resources/services/HAWQ/package/templates/hawq.limits.conf.j2
@@ -3,7 +3,7 @@
 #######################################
 #### HAWQ Limits Parameters ###########
 #######################################
-* soft nofile 2900000
-* hard nofile 2900000
-* soft nproc 131072
-* hard nproc 131072
+{{hawq_user}} soft nofile 2900000
+{{hawq_user}} hard nofile 2900000
+{{hawq_user}} soft nproc 131072
+{{hawq_user}} hard nproc 131072
