[#97345280] - Initial commit with fix

--- a/src/main/resources/services/HAWQ/package/templates/gpinit.j2
+++ b/src/main/resources/services/HAWQ/package/templates/gpinit.j2
@@ -74,4 +74,4 @@ DATABASE_NAME=gpadmin
 
 #### Specify the location of the host address file here instead of
 #### with the the -h option of gpinitsystem.
-#MACHINE_LIST_FILE=/home/gpadmin/hostfile_gpinitsystem
+#MACHINE_LIST_FILE={{GPADMIN_HOME}}/hostfile_gpinitsystem
