[#88202194] Add snappy-java jar to pxf classpath

--- a/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
+++ b/src/main/resources/services/PXF/package/templates/pxf-private-classpath.j2
@@ -31,6 +31,7 @@
 {{hadoop_home}}/lib/log4j-*[0-9].jar
 {{hadoop_home}}/lib/protobuf-java-*[0-9].jar
 {{hadoop_home}}/lib/slf4j-api-*[0-9].jar
+{{hadoop_home}}/lib/snappy-java-*[0-9].jar
 {{hadoop_home}}/lib/htrace-core-*[0-9].jar
 {{hadoop_home}}/lib/hadoop-lzo-*[0-9].jar
 
