--- a/src/main/resources/services/GREENPLUM/package/templates/greenplum-profile.sh.j2
+++ b/src/main/resources/services/GREENPLUM/package/templates/greenplum-profile.sh.j2
@@ -4,5 +4,5 @@
 source {{greenplum_gphome}}/greenplum_path.sh
 export MASTER_DATA_DIRECTORY={{greenplum_master_dir}}/gpseg-1/
 export PGPORT={{greenplum_master_port}}
-export PGHOST={{greenplum_master_host}}
-export PGUSER={{greenplum_admin_user}}
+export PGHOST={{greenplum_master}}
+export PGUSER={{greenplum_user}}
